@@ -126,7 +126,8 @@ class ExportTest:
     def setup_db (self):
         print 'rm.dbargs[file]=',rm.dbargs['file']
         self.db = rm.RecipeManager(**rm.dbargs)
-        if self.db.fetch_len(self.db.recipe_table)==0: raise "No recipes in database."
+        if self.db.fetch_len(self.db.recipe_table)==0:
+            raise Exception("No recipes in database.")
         self.mult_export_args = {'rd':self.db,
                                  'rv':self.db.fetch_all(self.db.recipe_table),
                                  'conv':None,
